fix: hide overflowing test container in qunit

--- a/test/css/qunit-test.css
+++ b/test/css/qunit-test.css
@@ -1,5 +1,6 @@
 #ember-testing {
   width: 100%;
+  overflow: scroll;
 
   -webkit-transform: scale(0.5);
   -moz-transform: scale(0.5);
